--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@
         font-weight: bold;
         font-style: normal;
     }
+
+   
     .contener {
 
         display: grid;
@@ -30,15 +32,26 @@
         flex-direction: column;
         gap: 80px;
         border: 1px solid white;
-        height: 570px;
+        height: 100%;
     }
-    
+
     .SidParBottom {
         padding: 10px;
         display: flex;
         flex-direction: column;
         gap: 20px;
 
+    }
+    @media(max-width:430px) {
+        .SidParBottom {
+            padding: 10px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 10px;
+            height: 15vh;
+    
+        }
     }
 
     .nestedgrid {
@@ -52,7 +65,24 @@
 
 
     }
+    @media(max-width:430px) {
+        .nestedgrid {
 
+            display: grid;
+            grid-template-columns: 432px ;
+            grid-template-rows: 300px 300px 300px
+            300px 300px 300px 300px 300px;
+            gap: 30px;
+            padding-top: 40px;
+        
+    
+    
+        }
+    }
+       
+    figcaption{
+       color: #d5bdaf;
+    }
     .photoBox {
         width: 350px;
         height: 350px;
