--- a/css/contact.css
+++ b/css/contact.css
@@ -23,10 +23,46 @@
     border: none;
     border-radius: 5px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    /* padding: 25px; */
     gap: 30px;
 }
+@media(max-width:430px) {
+    .contener {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 50px;
+        margin-bottom: 240px;
+    
+    }
+    
+    .card {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 300px;
+        height: 500px;
+        background-color: #d5bdaf;
+        border: none;
+        border-radius: 5px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+        /* padding: 25px; */
+        gap: 100px;
+    }
 
+    button {
+        width: 150px;
+        height: 15px;
+        background-color: white;
+        border: none;
+    }
+    
+    input {
+        height: 20px;
+        width: 200px;
+    }
+    
+}
 button {
     width: 200px;
     height: 30px;
