--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,14 @@
     border-radius: 50%;
     border-style: solid;
 }
+@media(max-width:430px) {
+    .photo1{
+        width: 100px;
+        height: 100px;
+        border: #f3f4f6;
+        border-radius: 50%;
+        border-style: solid;
+    }}
 footer{
     width: 100%;
    height: 50px;
